--- a/index.html
+++ b/index.html
@@ -771,7 +771,19 @@ _stq.push([ 'clickTrackerInit', '252170110', '0' ]);
 					window._tkq.push( [ 'recordEvent', 'wpcom_marketing_bar_cta_click', {"is_current_user_blog_owner":false} ] );
 				} );
 			});
-		</script></body>
+		</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJY73RFM1Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CJY73RFM1Y');
+</script>
+
+</body>
 
 <!-- Mirrored from dogedoog.wordpress.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Jan 2026 04:56:09 GMT -->
 </html>
