--- a/index.html
+++ b/index.html
@@ -771,7 +771,18 @@ _stq.push([ 'clickTrackerInit', '252199018', '0' ]);
 					window._tkq.push( [ 'recordEvent', 'wpcom_marketing_bar_cta_click', {"is_current_user_blog_owner":false} ] );
 				} );
 			});
-		</script></body>
+		</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EHXDSJQSXJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EHXDSJQSXJ');
+</script>
+</body>
 
 <!-- Mirrored from dogedoog1.wordpress.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Feb 2026 07:35:26 GMT -->
 </html>
