--- a/index.html
+++ b/index.html
@@ -774,13 +774,13 @@ _stq.push([ 'clickTrackerInit', '252199018', '0' ]);
 		</script>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EHXDSJQSXJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9EV66DC4LE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-EHXDSJQSXJ');
+  gtag('config', 'G-9EV66DC4LE');
 </script>
 </body>
 
