--- a/index.html
+++ b/index.html
@@ -774,14 +774,15 @@ _stq.push([ 'clickTrackerInit', '252199018', '0' ]);
 		</script>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9EV66DC4LE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EJJSRB339"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9EV66DC4LE');
+  gtag('config', 'G-3EJJSRB339');
 </script>
+	
 </body>
 
 <!-- Mirrored from dogedoog1.wordpress.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Feb 2026 07:35:26 GMT -->
